@@ -2,17 +2,17 @@
 Hash: SHA256
 
 DIST conf-update-1.0.2.tar.bz2 18243 SHA256 1246b83d8927e4333cfcb535217e5f055bc9aa0290f617c2ab1bb97dbeb3de9c SHA512 8611b30e58a9222a024e19d67e957a63d9c44627067a241e4ee5e761f1950ae7f1aa1491f055ba267be65f813ee7da1a8703028736b65dfd2c4ef79ace906f49 WHIRLPOOL 139e07105eed7d8ee5246c24833ecc110c92a5361892a5ee98ea2eee5d30199cbee788f47497d5d32c95c387bbf2df16589faa79c2dbf00b5ca5d347d7483c9e
-EBUILD conf-update-1.0.2.ebuild 960 SHA256 4f5d935227594d9fded6922c3e0ebfa0496c9ff8f811e1610601acf83a304a7d SHA512 84c67e77a26dfee444f3acb51d239d03c9935ece57f92f0ea3a565e4113621359df6fa2f07be13cf62421e4ae5fa19fb3722ec5c7adc49e09bfcef4f3d58be2f WHIRLPOOL b52c834cb1a1fce651e095e36a5c1f5197da8ebe0ea829bbea556a1cae6c685ffd8cac26df8e18fd5b31e2f9f9b72d8152b5949f012dd9cc10d0ee42c1c89679
-MISC ChangeLog 5217 SHA256 597d255e60ee5ac4f25f5e460b10b8dc80028aaa3d8b4033451d330f820251be SHA512 d521793a17d60b4b8c0b603bb465c0fd360c4d056fb6eb0dbebc558d65cdc9fb3162d919b06c2dc98cef02278875d56e9f479d306537376a62f79bedc81c64c1 WHIRLPOOL 5134d1b634424dd1fd381f68fe5bfa3136a19d8736483d7a3e03c1876c0d18664d520f87071d3666ff339fddbeafdcac1b4bdb7f0087484e68f2bc55d8b392dc
-MISC metadata.xml 585 SHA256 8b480723f7ac2d8707abf992c8864d42136b1d42241f7b6f349a6404ff1e5778 SHA512 d06902b4d83bcfd6d42e3a46aa190ba83bfabfafd490e8b24db6223a78863d564d0b4cdab3ca5eff4bad9259270384d38308cbeeefca23801e587f9cd1ba1f0a WHIRLPOOL 172a2a38008dc75235c45bf04b0c9d2edbd7e472892ea34c8a3dac15a176cc77180fa8e7e9626162d5dfa6b52cc1fc4d43a5453c190c0a39b2e87ae27517a98e
+EBUILD conf-update-1.0.2.ebuild 1013 SHA256 4eff5799243300e643faa2c0af462931bcd17fb7c44d2bafd79185681632807c SHA512 9d66aaf41950a81c859748539e09533a614ffc1e6eb644cf9cc73f4e78c9dc5bd9b8e1b4a657605660054d108b35fad612d85132694d1d2ad880d340ed818b31 WHIRLPOOL 3a9ec199f29d6e60aa23265ca638ebe9bb2d5d8c35aabb6fa3212b333dcbd6a7c1dbc18f0933cab30faa0ec6479639fd6720b2a3f215616d8c8e18fd9f6af895
+MISC ChangeLog 5364 SHA256 dec9e79d578a9bda3b5dc99738b64eb59afa8d55cd27e131c1cd14d5123871e2 SHA512 fa58e771bae988cd91afedc083d4bdc3424649cc8b0750ab48a7f26111aa3427533980a11f3a4f1307b5252bd376794054e59496a639aa1140bebc3064599b6a WHIRLPOOL d0d1a520192851d6ed9304798860af425925a719079b348230465ce9618252ad27e470980b713a369514e7fb64baf88751e546ee22a77d2fa0dd7350d35ea3e5
+MISC metadata.xml 596 SHA256 84234ed0a5b1741360cd1089580f63132f3fd134e828ee1a1e4cd634a6ef4945 SHA512 cde6ca322199a57b920250917501f1a10e181c3c4a9042a595a375ef2a38170008cf6d510866d7e0d57b1da450d3e9fe324b6f17a59c0c049dea14e4eeeb10fc WHIRLPOOL 2b6ebc7cc2acbfa1d45389b108a8ed1c44811b8ea23b8ce3598e32492347dee8690b1e0cf5695780b0f35b617a87160a5f4f9b4b06bcac4ae105b1e35a701039
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTDv7TAAoJEA2sAkrWKOU28lIIALNp63A6bvTA2ukZERU2B8Xx
-b6SvTfOhETVZwYRvUvYDHKVrGQAN6Ycs+HQrZxsHdOSy9WV/5ZQTOWcWNdDnIbuJ
-sifZ6PIoyts46qJBo4MH3z3RRn6s9zqLzfXXSweI7/eXE89+zBKkWz6Gu4LUlbYd
-CD1iKDf756GSycsRhv9wyxukQflPLfAeuBLnB8O+X/JrmXvIEOMuf5fF8/uHNHa4
-CQ8R3dlzzQQda6WUS7fdtI3vFINs2u6NX9EY1nBBViLZQk6c2qZnvoxwzgcmYiG/
-1TK2esdYp+hu3uubWcnNfRCMjw4TEMHgN4V8cNWvb4Pp6QglM5lRj7eXiBsL4KY=
-=6ZT7
+iQEcBAEBCAAGBQJTdm37AAoJEA2sAkrWKOU2mJ0H/3QS/7I20YWrGv5advvG+ela
+AyeZF55Kps+Zt+mX+uVHfhHTlCYpGg77QGYYcgTdVxdJ1LTywffxfoyLGCMZoYJS
+bygb90Sqohf+X/vJxxFzmrpp9bk2gNyBQ7xgtjQOMt2zjYrNUi2ssrTtLQivMivp
+tUkqPze+q5iakfoMTLkvrw+NxPbMslDvDRp2ffZtfVDOBcOmxRwBzf986sgJPnWE
+tdR0ZslFdj/BhZGKbu5K/wF6i2u9M96P3Hxclmu6es9HH6t+fQmOPSd4pQ3BDJWF
+OC/N8H7tAbEtAeAxHRCv+Vzib4u8QElhEVv37LNSwdphDmAQBS/SyO7qFVaqQkA=
+=NvKs
 -----END PGP SIGNATURE-----
