@@ -2,12 +2,12 @@ DEFINED_PHASES=compile install prepare
 DEPEND=virtual/pkgconfig >=dev-libs/glib-2.6 sys-libs/ncurses dev-libs/openssl colordiff? ( app-misc/colordiff )
 DESCRIPTION=conf-update is a ncurses-based config management utility
 EAPI=4
-HOMEPAGE=http://conf-update.berlios.de
+HOMEPAGE=http://dev.gentoo.org/~nimiux/app-portage/conf-update
 IUSE=colordiff
 KEYWORDS=amd64 ppc x86
 LICENSE=GPL-2
 RDEPEND=>=dev-libs/glib-2.6 sys-libs/ncurses dev-libs/openssl colordiff? ( app-misc/colordiff )
 SLOT=0
-SRC_URI=mirror://berlios/conf-update/conf-update-1.0.2.tar.bz2
+SRC_URI=http://dev.gentoo.org/~nimiux/app-portage/conf-update/distfiles/conf-update-1.0.2.tar.bz2
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=2c0619361878afa19c2be4fb43c9e78f
+_md5_=8b76f41818d4f32619be219b5981b72f
