@@ -11,4 +11,4 @@ RESTRICT=test
 SLOT=0
 SRC_URI=http://distcc.googlecode.com/files/distcc-3.1.tar.bz2
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	python	be9965681d83c3980660a2660ac95e95	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=f18da2f971d8b2e89ee3703aea84cfc1
+_md5_=5f24a7758f5ca04a37633fb7e7386dba
