@@ -38,22 +38,18 @@ DIST distcc-3.0.tar.bz2 582700 SHA256 bb6f5674b619ef1438da67739d982e8a6b11e01f74
 DIST distcc-3.1.tar.bz2 588820 SHA256 f55dbafd76bed3ce57e1bbcdab1329227808890d90f4c724fcd2d53f934ddd89 SHA512 0ca7167309badf5d36d2783bab398295b52c43fde0355cf1902032c70b27fc40c21729c98af0ee4c0aeea0c48755e4626308e9385d938b7822de27cdb048e7bd WHIRLPOOL 9152feab2b7def17606259293fe7af7815ec295defa0287b7e5c054f17b0cb73d07f6e721855fd06eec4fc838c44ff509db20fc89c47871f7f1349e08cd126bd
 DIST distcc-3.2rc1.tar.bz2 609904 SHA256 311671e844625d7fdb18dd3d096cd855751cfe8de13827682bcb7beff9133b30 SHA512 98b2e8423d724bbb6a615d946d170441a8e293310785f867d7a277b318c043a37b0af39ae8ed1f7a0667803de9db1d1925199bad85130cf9bd9cb347635125ee WHIRLPOOL d366abb05d10aa5a458acf7b57f5bf52fd4f5ff46c68494e28140eb944524e66d729ebef60190acb1d9b33a0fb8faea6b909509de67294c29dbebcf01d500a36
 EBUILD distcc-2.18.3-r10.ebuild 4890 SHA256 9eef0dc109e35aa396cf0300e53e3835559412da2d58f3dc401ec1ef812833ea SHA512 fbd2b4a36422c1178d7cac938f9cd5bcc6851b88c9d8d05bad7e53f5aeca61a0a1921a38eb104be8b211dc7d5953d44a13dcfe9d981a020d43a2f880d0fb06b3 WHIRLPOOL ca30a1d4145824bcab02defa98372137b01b7d96c8df99ff0cc5456163b69a587abe033168e38492ab40812f26716b0fc01387012e52d1fd301aed14be4e24da
-EBUILD distcc-3.0-r4.ebuild 4507 SHA256 8b660429fe27592ac1c400a1c40bbf45b0b8bc0e753c97a34717649c0babf515 SHA512 9d9c9664726ab6c6534fc466b819cfcd3ca0d40d17c432d580a2fe23075be9d9da195571c1e079ad80c893ba8dc8e65f69710a2412607cf68d4c85d2af2304c3 WHIRLPOOL 48653ef9c7b6750a5179de9897dcef6954ccec2adb91f01ecbb0560e32c134f4a857675a5425b66854a21832277e16904aabe9e2c40768644ca35efef4106e6c
-EBUILD distcc-3.1-r5.ebuild 4742 SHA256 f8e73d2bbd5d04298feeb02f690f9f89184d48ed894787222761efea1d5de11c SHA512 a037869a2d7adf3cc0e1952d8985e18afc21eb46eae5ef5739c105f6a4a8f50e2c96fe2dc41801685ba4a51b9500294c24366ffe692fe9716d98bf8259e203a1 WHIRLPOOL 7c622631cffafd770d62b7633b9e8f7872fbdd3abddf83f4bf0f0362937c377fcd149dc419e2fb1816063adfab3680776c30634e18cee1aadc2bed9705bb3a66
-EBUILD distcc-3.1-r6.ebuild 4810 SHA256 3bc5e2d21ef43f0678b111bb4ea210a0b1398fa4c6ed035f638ebe51a9ed49ea SHA512 f7d03d9d849e41ff6bc89bcb9bd53a57e18ec07170bdab421f36f34d25e6b9713c28a94124d5d84e1f165b75b122f5c2c44472e1764069b1efc5f4ed86570e2e WHIRLPOOL 228fb40a2c5f11e5c5fe2beaf1fcc7e3e2817af601a9ab21f277e771761179a1f19fd0352b362472378a236ef09f903fa5e80983aac8fcfcabba9352e24590c6
-EBUILD distcc-3.1-r7.ebuild 4484 SHA256 f3076bed7677b245441e7f0013e6e40c72be19dacb09234565f965cd356f5394 SHA512 4831a9d3e9674335606c17b6033b4698371daf202681e258b262ca9e5dde0bfddb27e6a02e27c2732c1f9bcd27059a477ac9ab67e2d6cd3e751c8c6959dec7f3 WHIRLPOOL 4f4dde64004bbae550b5613608d3453302247f9278d581e12bef201de2734a8ea9e4b58ca58d5a8f0f41498cdb9b06b57dd2d3a7cb46a87cf2ee00e97280703a
-EBUILD distcc-3.1-r9.ebuild 4688 SHA256 a0ba76b3919bda709ad2541e5b98d08bfbd157def0e0b8f0e8ba1436e97acc1e SHA512 4e315f8381ee3d558acaaed093c4e656867ed564b3c146812e8729fd006a10c806dfc55e9581748326da74af156930790491a3c0cb4de77902af296640075a5e WHIRLPOOL 490eb92f6cc957b49efa482f8acf20efc9d06cd18b63e5165c5cfefad7eed1205cff423537189e3a83bbb4e11fa9036e896c78f00a21fbbcc6b4460e2ba46b8e
+EBUILD distcc-3.0-r4.ebuild 4500 SHA256 890af2113a538fb7a4d12644e9adc8aea49c7e1f25723404bf6185a401357b2f SHA512 b0f652003f49e63c04c5a2a9463b70c6aee94b74f3e5a55f51656eb6fc0f305bfdb1e0dca4142929129f8acde233cfa5e996420cedae1b3dcffb218dbcfcda3e WHIRLPOOL 13f8abc008068cc4aa2a296a2cbf75048ec433302f2d4806685e619f9cbcadaa7934762f964619ca8ab11e6e6f9059f87bf6373cae486130a415d347932a2e6b
+EBUILD distcc-3.1-r5.ebuild 4738 SHA256 2520d7b197aef8fb9d22bc79429b9703b771bbc7023927df9d2f18ce71a6d604 SHA512 a4b1533353235c16513671e7adcb63523cbf4db621f2fee497f498305d5d213ad7cea60ee3a22375c806a0aeb3a245a5b8ce9337f21f399acd148bdbe6356e6b WHIRLPOOL 45c418b46ea0a2918cbafd6c5e15454211de0a662e91837e52e691b86394b86e670acb63b5f59cc1d1ae1791656f62ab1fc15cc62004c0d61e6938bd5c2a2aee
+EBUILD distcc-3.1-r6.ebuild 4806 SHA256 b6ae731be02bf4374ff2282a127ab7b960c17e1a62bdf0dac26ba8d857e31283 SHA512 9aa5219b86f9ad3b35ea87cbd3f6c16cd0f1bea0d6489097e10676be47f361bcf83e1d2aa3c458dc3f874b5b3eb9866650fc6cdbdc2f810e8392428adcd89aa4 WHIRLPOOL bbbe0811bf238b48945d962b16d337e04c9de51e2c39bc2becc0753a1643b8c751e6ab95139cd334fc2ca05d33a9edce237d2fbda1cfcd1ad6cb45f7208b0c83
+EBUILD distcc-3.1-r7.ebuild 4480 SHA256 f8247391c8ab77a601f35cf5013ae77e313800e133ac4bc3d1361dd2285314c8 SHA512 b3c5e5d87d39fe0596972f1e20e6a4c7c2bacef10f2dda83f46d35642d494936503e89dc3d37f188c8262cf83437c6cd7c541c4b2302725333d2a0034d56d213 WHIRLPOOL f091b9b428305b7d038607ff3f625067f4ce9bc45956c8e6829fab39ce8ba639e36963203430b909355bd7db4663d335c8b5ddbdd4bca46518a6ec9c4c41f9ea
+EBUILD distcc-3.1-r9.ebuild 4684 SHA256 6ba3e5ff24e64292f267dd70682b85a63d005abee500a901317a786c09c92cdf SHA512 da530c24818497b51c61669daae21b7c997258136b7affe2238a6ed3d484f41fe199c267c673ff7eb730f8bae3a330509e72c15a5aa3daef446143f7c6bf9a23 WHIRLPOOL 289429955a69fff29141117ef16c9f03af55e7e8feba3448c51bbf44ff7d267f1ebeed54d8e01e795dda0cac7ffff0d055db23f2954a822c572cd3fefba621e0
 EBUILD distcc-3.2_rc1.ebuild 6025 SHA256 bc399460fa19b0de9537c5a907fc3e2bb37857cebf6aae3b7b64d5e571995ba5 SHA512 91c112f854dcc2f54921aa8f303ce3bc43bdb5e19d3058fd9a597b5888734cc87cd2561994d09102a0d94693ea4efc2d2b72392a77d522b24d87e21737dc64be WHIRLPOOL ef8d9b5d75bd116780fa157d7336549235dcf62636e4eee4ad4f2b1ee896e74ed266194b3343da4d4aa88865940abfe1e5d518e13344ebdfc7b1046bc53d09a9
-MISC ChangeLog 41569 SHA256 8af63b226d14a9155bdf64ebf64721bf499caa97eb166b9e3dce02370b52df02 SHA512 c2cac70fc36f4ace5bc037259a7f6120e8b8dfffb632c70d57f6ecd66448d7491bce41f04babfcc79316708f9fadd32a5c4d95f64682320eb82edaa152228861 WHIRLPOOL 4641f088c64c45d5e7b380b583f38bf69648b34774ea9332b0d402864908898c90fba48155b35a0ed34995ba08dc112a7cccf1b847056842d92d3033556e4b99
+MISC ChangeLog 41736 SHA256 04fd049759384d1412b667400f61a31a3c1f5a770d594f230bdbd3e00b8f22d9 SHA512 c746fe6803927694e329de56196a5ffaaf04fb6bc736451dc262f0924cabb417d683580871af96bdd7a046bacb61f84197efc44b155b267aeaa0dc996da32b64 WHIRLPOOL 47adc08b1b37ef5b6b7644605a5a08ea794f6dfee68969b18dccdae3b8ef87ecbef9dc33e80cdead8e2efb492aa4a6dbb21ece0b4b4c967a029207c529637ca1
 MISC metadata.xml 490 SHA256 c507fd5ee99486759c3acb83a13d874253ce959acd93ac3084febc424a46df86 SHA512 b076932259b157a51d6006324835ab91a9cb86538fb95b8e321647e90675c210051fa3ea342ed1b26b884c166e2825aa16056f2178029cf5d7bf1042cc9425ef WHIRLPOOL 53eb51b9e8fa1acbbef117955d1ad51b36ead058b6cd0b09d902467a58de9854f0b896d7a8961ec2ef019b7d7e39ef24802a5fbb23a11618a9535c17e98bc038
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTcLIFAAoJEEdUh39IaPFNTm0IAJ/DTc1EC98Kl2i27oqbh1m2
-bg4iTVQoZczE1PvsrqdMGoRKWlKw8rYF5waj5BwFDCB5sBu1GNbByaBPEyPqi4ln
-SaSoQ6RjpRvF9UPpsLBXvbEwdW+ADmddGaI+IKyqbrqdUyUQnhciR6ka+knprGJL
-sJkH8Q9er3YP7hnsnVW+M+8GJ71lWhe7M5fHyvj8Mes4+JFTKXEq8jL/4xd8kGv6
-ltlHWyu7hs0noEp9uilk6H/KSzH28utGVOmxxUQbR9jMH06M4lz2nQ7qVAJhheS+
-J6LzsFi0eeqU4Ahw5/cYw1sfPdmHIzncC8af1HMfb9hOLu/RLCoPQ4x82BSPVkc=
-=e+2+
+iEYEAREIAAYFAlN2bKQACgkQVWmRsqeSphM+egCfcq99gP3VukkDyOBEKqoRN6g6
+UgkAn0m7GGz6fkWRmxBQRiH8azXhvGnq
+=Tnnv
 -----END PGP SIGNATURE-----
