@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/distcc/distcc-3.1-r7.ebuild,v 1.6 2013/09/05 19:08:49 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/distcc/distcc-3.1-r7.ebuild,v 1.7 2014/05/16 19:53:04 jer Exp $
 
 EAPI=5
 
@@ -136,7 +136,7 @@ pkg_postinst() {
 
 	if use ipv6; then
 		elog
-		elog "IPv6 has not supported yet by ${P}."
+		elog "IPv6 is not supported yet by ${P}."
 	fi
 	elog
 	elog "Tips on using distcc with Gentoo can be found at"
