@@ -1,6 +1,10 @@
 # ChangeLog for app-portage/conf-update
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/conf-update/ChangeLog,v 1.38 2014/02/27 09:00:13 nimiux Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/conf-update/ChangeLog,v 1.39 2014/05/16 19:57:52 nimiux Exp $
+
+  16 May 2014; Chema Alonso <nimiux@gentoo.org> conf-update-1.0.2.ebuild,
+  metadata.xml:
+  Project moved to my dev space due to berlios shutdown
 
   27 Feb 2014; Chema Alonso <nimiux@gentoo.org> -conf-update-1.0.ebuild,
   -conf-update-1.0-r1.ebuild, -conf-update-1.0.1.ebuild,
